# edunext-grafana-dashboards

./: .gitignore  CHANGELOG.md  README.md  installations-performance.json  namespaces-performance.json  pyproject.toml
dashboards/: installations-performance-no-regex.json  installations-performance.json  nodes-performance.json
