[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drydock"
dynamic = ["version"]
description = "A repository to manage our grafana custom dashboards"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "AGPLv3" }
authors = [
    { name = "eduNEXT" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "python-semantic-release",
]

[project.urls]
Homepage = "https://github.com/edunext/edunext-grafana-dashboards"
Code = "https://github.com/edunext/edunext-grafana-dashboards"
"Issue tracker" = "https://github.com/edunext/edunext-grafana-dashboards/issues"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.wheel]
universal = true

[tool.semantic_release]
commit_message = "chore(release): preparing {version}"

[tool.semantic_release.branches.main]
match = "(main|master)"

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  "docs:",
  "build:",
  "style:",
  "chore:",
  "test:",
  "revert:",
  "perf:",
  "refactor:",
  "ci:",
]
